Update videos and fix stars

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="planet medium">
         <!-- <div>Travel</div> -->
         <video autoplay muted loop>
-          <source src="assets/videos/planet-alan-travel.webm" type="video/webm">
+          <source src="assets/videos/planet-alan-travel.webm.mp4" type="video/webm">
         </video>
       </div>
       <div class="paper">
@@ -108,7 +108,7 @@
       <div class="planet large">
         <!-- <div>Acomodations</div> -->
         <video autoplay muted loop>
-          <source src="assets/videos/planet-alan-accommodations.webm" type="video/webm">
+          <source src="assets/videos/planet-alan-accommodations.webm.mp4" type="video/webm">
         </video>
       </div>
       <div class="planet-image small">
@@ -142,7 +142,7 @@
     <section id="itinerary">
       <div class="planet medium">
         <video autoplay muted loop>
-          <source src="assets/videos/planet-alan-itinerary.webm" type="video/webm">
+          <source src="assets/videos/planet-alan-itinerary.webm.mp4" type="video/webm">
         </video>
       </div>
       <div class="paper">
@@ -226,7 +226,7 @@
       <div class="planet small">
         <!-- <div>Registry</div> -->
         <video autoplay muted loop>
-          <source src="assets/videos/planet-alan-registry.webm" type="video/webm">
+          <source src="assets/videos/planet-alan-registry.webm.mp4" type="video/webm">
         </video>
       </div>
       <div class="paper">
@@ -243,7 +243,7 @@
       <div class="planet large">
         <!-- <div>About</div> -->
         <video autoplay muted loop>
-          <source src="assets/videos/planet-alan-about.webm" type="video/webm">
+          <source src="assets/videos/planet-alan-about.webm.mp4" type="video/webm">
         </video>
       </div>
       <div class="paper small">
@@ -322,7 +322,7 @@
       <div class="planet large"></div>
         <a href="http://nina-alan.world">
           <video autoplay muted loop>
-            <source src="assets/videos/planet-nina.webm" type="video/webm">
+            <source src="assets/videos/planet-nina.webm.mp4" type="video/webm">
           </video>
         </a>
       </div>
