--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Alan & Nina<br>
             Celebration<br>
             <s>August 29, 2020</s><br>
-            <mark>July 17, 2021</mark><br>
+<!--             <mark>July 17, 2021</mark><br> -->
             Philadelphia, USA
           </h1>
           <div class="welcome-vibe">
