--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
       </div>
 
       <div class="paper">
-        <p style="margin-top: 0;">Are you ready to go to Alan's planet?</p>
-        <p><a href="http://alan-nina.world">Yes, take me to Alan's planet</a></p>
+        <p style="margin-top: 0;">Are you ready to go to Nina's planet?</p>
+        <p><a href="http://nina-alan.world">Yes, take me to Nina's planet</a></p>
         <p><a href="#home">No, take me home :)</a></p>
       </div>
 
