--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
       <div class="paper">
         <p style="margin-top: 0;">Are you ready to go to Nina's planet?</p>
-        <p><a href="http://nina-alan.world">Yes, take me to Nina's planet</a></p>
+        <p><a href="https://laurelschwulst.github.io/nina-alan.world">Yes, take me to Nina's planet</a></p>
         <p><a href="#home">No, take me home :)</a></p>
       </div>
 
