--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Alan & Nina World</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="assets/css/index.css?473425">
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://laurelschwulst.github.io/alan-nina.world/assets/images/favicon.png">
   </head>
 
   <body>
